This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance.
============================================================================
12/13/19: Added ability to remove positions from regular array of holes for
multiple Records.

12/13/19: Added predicted relative starting and ending frame numbers to tilt
angle output file for frame tilt series.

12/12/19: Made sure current settings in multishot dialog are used before
acquisition (In 3.7).

12/9/19: Increased timeouts and added properties to set them for JEOL FEG
flashing (In 3.7).

12/7/19: Made NextProcessArgs set arguments for running a tool command, and
added another command to specify placement of the arguments.

12/7/19: Fixed crash reading montage, reissued beta7.

12/5/19: 3-8-0beta7
12/5/19: Added script commands to report the number of montage pieces to be
taken and the name of a file set to be opened for a Navigator item; to take an
image with parameters matching those of an image in a buffer and crop it if
needed to that size; to crop the center of an image to specified size.

12/5/19: Added support for X lens used with laser phase plate.

12/5/19: In SEMCCD, improved measurement of mean when a frame threshold is set
and started putting -1 in the saved frame list file if first or last frame is
below threshold.

12/1/19: SEM_3-7-11
12/1/19: Fixed use of wrong gain reference when aligning K3 frames taken with
fast binning in the SEMCCD plugin (In 3.7).

11/27/19: Fixed crash when trimming improperly oriented K2 image (In 3.7).

11/17/19: Added task for conditioning a phase plate.

11/17/19: Added script command for doing a linear least squares fit between
two or 3 array variables.

11/17/19: Added script commands for reporting and setting CDS mode for K3.
Added property to switch out of CDS mode for Refine ZLP.

11/15/19: Fixed drift settling when not reblanking after exposure during