@@ -2413,7 +2413,7 @@
           <TD>A parameter that is used in the initial calibration of image shift (or when 
             calibrating 'from scratch'). The right value is needed to get shifts that are 
             big enough, but not too big, in the first round of calibration. For an FEI 
-            scope, this may need to be set to something besides 1 ff image shift is not 
+            scope, this may need to be set to something besides 1 if image shift is not 
             properly calibrated in the scope alignments. For JEOL, a value of 0.02 is needed 
             at 200 KV; a value of 0.1 is needed at 300 KV.&nbsp; For Hitachi, a value other 
             than 1 may be needed for calibrating HR mode.</TD>
