@@ -3,6 +3,11 @@ This is a record of changes to SerialEM since it was first publicly released.
 * marks changes or enhancements noticeable to the user, or items of particular
 significance.
 ============================================================================
+12/18/19: Made frame tilt series create a frame stack mdoc file with tilt
+angles, relative timing, and dose information included, and added ability
+to write a command file for aligning with Alignframes, including thresholds
+for excluding partial frames from alignment.  (New SEMCCD plugin needed).
+
 12/13/19: Added ability to remove positions from regular array of holes for
 multiple Records.
 
